refactor: move explainability and incremental calculator to Enterprise